CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
SET(EXEPROJECT gr8chip8)
PROJECT(${EXEPROJECT})


SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

SET(SOURCE_FILES
    chip8.cpp
    chip8.h
    main.cpp)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")

FIND_PACKAGE(SDL2 REQUIRED)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR})

ADD_EXECUTABLE(${EXEPROJECT} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${EXEPROJECT} ${SDL2_LIBRARY})
